--- a/src/APBDTrial_2/APBDTrial_2.csproj
+++ b/src/APBDTrial_2/APBDTrial_2.csproj
@@ -11,4 +11,14 @@
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0"/>
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Controllers\" />
+      <Folder Include="DTOs\" />
+      <Folder Include="Helpers\" />
+      <Folder Include="Middleware\" />
+      <Folder Include="Migrations\" />
+      <Folder Include="Models\" />
+      <Folder Include="Services\" />
+    </ItemGroup>
+
 </Project>
